--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,13 @@
 			<version>4.3.0</version>
 			<scope>test</scope>
 		</dependency>
+
+		<!-- FILE UTILS TO COPY SCREENSHOT -->
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.6</version>
+		</dependency>
 	</dependencies>
 
 	<!-- FIX JAVA 8 -->
